--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-# The "name" field is ommited
+# The "name" field is omitted
 name: learn-gha-tutorial
 
 # Controls when the workflow will run
