--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -2,6 +2,9 @@
 # The "name" field is omitted
 # name: learn-gha-tutorial
 
+# With user defined run-name
+run-name: gha-with-runname
+
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
