--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -2,7 +2,7 @@
 # The "name" field is omitted
 # name: learn-gha-tutorial
 
-# With user defined run-name
+# With user defined run-name omitted
 # run-name: gha-with-runname
 
 # Controls when the workflow will run
