--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -1,9 +1,10 @@
 # This is a basic workflow to help you get started with Actions
 # The "name" field is omitted
-# name: learn-gha-tutorial
+name: learn-gha-tutorial
 
 # With user defined run-name omitted
-# run-name: gha-with-runname
+run-name: Run by by @${{ github.actor }}
+
 
 # Controls when the workflow will run
 on:
