--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -3,7 +3,7 @@
 name: learn-gha-tutorial
 
 # With user defined run-name omitted
-run-name: Run by by @${{ github.actor }}
+run-name: Run by @${{ github.actor }}
 
 
 # Controls when the workflow will run
