--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -13,6 +13,10 @@ on:
   pull_request:
     branches: [ "main" ]
   
+  #Triggers the workflow on label creation
+  label:
+    types:
+      - created
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
