--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions-Test
+# This is a basic workflow to help you get started with Actions-Testing labels
 name: learn-gha-tutorial
 
 # With user defined run-name omitted
