--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -7,7 +7,7 @@ run-name: Run by @${{ github.actor }}
 
 # Controls when the workflow will run
 on:
-  #Triggers the workflow on label creation
+  #Triggers the workflow on label creation troubleshoot
   label:
     types:
       - created
