--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -6,11 +6,11 @@ run-name: Run by @${{ github.actor }}
 
 
 # Controls when the workflow will run
+#Triggers the workflow on label creation troubleshoot
 on:
-  #Triggers the workflow on label creation troubleshoot
   label:
-    types:
-      - created
+    types: [created, deleted]
+  
   # Triggers the workflow on push or pull request events but only for the "main" branch
   #push:
     #branches:
