--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -12,11 +12,11 @@ on:
     types: [created, deleted]
   
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  #push:
-    #branches:
-      #- main
-  #pull_request:
-    #types: [labeled]
+  push:
+    branches:
+     - main
+  pull_request:
+    types: [labeled]
 
     # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
