--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -4,22 +4,23 @@ name: learn-gha-tutorial
 # With user defined run-name omitted
 run-name: Run by @${{ github.actor }}
 
-
 # Controls when the workflow will run
 #Triggers the workflow on label creation troubleshoot
 on:
   label:
     types: [created, deleted]
-  
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches:
      - main
   pull_request:
     types: [labeled]
-
-    # Allows you to run this workflow manually from the Actions tab
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+# Let us trigger the workflows with a concurrency group
+concurrency:
+  group: learn-concurrency
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
