--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -14,7 +14,8 @@ on:
     branches:
      - main
   pull_request:
-    types: [labeled]
+    branches:
+     - main
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
