--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -38,11 +38,9 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          run: echo Hello, concurrency!
-          sleep 1m
+          echo Hello, concurrency!
+          sleep 2m
       
-
-
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
