--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -21,7 +21,10 @@ on:
 
 # Let us trigger the workflows with a concurrency group
 concurrency:
-  group: learn-concurrency
+  #with the context
+  #github.ref determine the current branch name
+   group: ${{ github.ref }}
+  #group: learn-concurrency
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
