--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -23,8 +23,8 @@ on:
 concurrency:
   #with the context
   #github.ref determine the current branch name
-   group: ${{ github.ref }}
-  #group: learn-concurrency
+  #group: ${{ github.ref }}
+  group: learn-concurrency
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
