--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -22,7 +22,7 @@ on:
 # Let us trigger the workflows with a concurrency group
   #group: ${{ github.head_ref || github.run_id }}
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.head_ref }}
   cancel-in-progress: true
   #with the context
   #github.ref determine the current branch name
