--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -40,7 +40,7 @@ jobs:
           sleep 30s
   
   build:
-    needs: print
+    if: github.repository == 'kansalnishant/learn-ckad'
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
