--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -34,6 +34,8 @@ jobs:
   print:
    runs-on: ubuntu-latest
    environment: test-environment
+   outputs: 
+    output1: ${{ steps.name.outputs }} >> "$GITHUB_OUTPUT"
    steps:
     - name: Run a one-line script
       run: |
