--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -35,9 +35,10 @@ jobs:
    runs-on: ubuntu-latest
    environment: test-environment
    outputs: 
-    output1: ${{ steps.name.outputs.test }} >> "$GITHUB_OUTPUT"
+    output1: ${{ steps.step1.outputs.test }} >> "$GITHUB_OUTPUT"
+   
    steps:
-    - name: Run a one-line script
+    - id: step1
       run: |
           echo Hello to multi job understanding!
           echo "test=hello" >> "$GITHUB_OUTPUT"
