--- a/.github/workflows/learn-gha.yaml
+++ b/.github/workflows/learn-gha.yaml
@@ -35,7 +35,7 @@ jobs:
    runs-on: ubuntu-latest
    environment: test-environment
    outputs: 
-    output1: ${{ steps.step1.outputs.test }} >> "$GITHUB_OUTPUT"
+    output1: ${{ steps.step1.outputs.test }}
    
    steps:
     - id: step1
